--- a/config/database.yml
+++ b/config/database.yml
@@ -4,19 +4,24 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  #database: db/development.postgresql
+  database: micole_desa
   pool: 5
   timeout: 5000
+  username: postgres
+  password: programa
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgres
+  database: micole_test
   pool: 5
   timeout: 5000
+  username: postgres
+  password: programa
 
 production:
   adapter: postgres
